frontend : displayed the categories and fixed an horizontal scroll glitch

--- a/closer-frontend/src/index.css
+++ b/closer-frontend/src/index.css
@@ -881,6 +881,10 @@ select {
   flex-wrap: wrap;
 }
 
+.scroll-horizontal div {
+  transform: none !important
+}
+
 .attendee {
   width: 100px;
   height: 100px;
